--- a/common.css
+++ b/common.css
@@ -35,120 +35,29 @@ input {border:none;outline:none;}
 .fx10 {  -webkit-box-flex: 10;-webkit-flex: 10;-moz-box-flex: 10;-moz-flex: 10;-ms-flex: 10;flex: 10;}
 
 /*flex水平对齐,start,center,end,between,around*/
-.jcs {
-    -webkit-box-pack: start;
-    -moz-justify-content: flex-start;
-    -webkit-justify-content: flex-start;
-    justify-content: flex-start;
-}
-.jcc {
-    -webkit-box-pack: center;
-    -moz-justify-content: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-}
-.jce{
-    -webkit-box-pack: end;
-    -moz-justify-content: flex-end;
-    -webkit-justify-content: flex-end;
-    justify-content: flex-end;
-}
-.jcb {
-    /* 09版 */
-    -webkit-box-pack:space-between ;/*start      space-between  end    justify*/
-    /* 12版 */
-    -webkit-justify-content:  space-between ;
-    -moz-justify-content:  space-between ;
-    -ms-justify-content:  space-between ;
-    -o-justify-content:  space-between ;
-    justify-content:  space-between ;
-    -webkit-flex-pack:  space-between ;
-    flex-pack:  space-between ; /*start   center end    justify     distribute*/
+.jcs{-webkit-box-pack:start;-moz-justify-content:flex-start;-webkit-justify-content:flex-start;justify-content:flex-start}
+.jcc{-webkit-box-pack:center;-moz-justify-content:center;-webkit-justify-content:center;justify-content:center}
+.jce{-webkit-box-pack:end;-moz-justify-content:flex-end;-webkit-justify-content:flex-end;justify-content:flex-end}
+.jcb{-webkit-box-pack:space-between;-webkit-justify-content:space-between;-moz-justify-content:space-between;-ms-justify-content:space-between;-o-justify-content:space-between;justify-content:space-between;-webkit-flex-pack:space-between;flex-pack:space-between}
+.jca{-webkit-box-pack:justify;-webkit-justify-content:space-around;-moz-justify-content:space-around;-ms-justify-content:space-around;-o-justify-content:space-around;justify-content:space-around;-webkit-flex-pack:distribute;flex-pack:distribute}
 
-}
-.jca {
-    /* 09版 */
-    -webkit-box-pack: justify; /*start  center  end    justify*/
-    /* 12版 */
-    -webkit-justify-content: space-around;
-    -moz-justify-content: space-around;
-    -ms-justify-content: space-around;
-    -o-justify-content: space-around;
-    justify-content: space-around;
-
-    -webkit-flex-pack: distribute;
-    flex-pack: distribute; /*start  center  end    justify    distribute*/
-    /* 其它取值如下：
-        flex-start  |  主轴原点方向对齐
-        flex-end        主轴延伸方向对齐
-        space-between   等间距排列，首尾不留白
-        space-around    等间距排列，首尾留白
-     */
-}
 
 /*flex方向，水平row，垂直column*/
-.fxdc{
-    /* 12版 */
-    -webkit-flex-direction: column;
-    -moz-flex-direction: column;
-    -ms-flex-direction: column;
-    -o-flex-direction: column;
-    flex-direction: column;
-}
-.fxdcr{
-    -webkit-flex-direction: column-reverse;
-    -moz-flex-direction: column-reverse;
-    -ms-flex-direction: column-reverse;
-    -o-flex-direction: column-reverse;
-    flex-direction: column-reverse;
-}
-.fxdr{
-    -webkit-flex-direction: row;
-    -moz-flex-direction: row;
-    -ms-flex-direction: row;
-    -o-flex-direction: row;
-    flex-direction: row;
-}
-.fxdrr{
-    -webkit-flex-direction: row-reverse;
-    -moz-flex-direction: row-reverse;
-    -ms-flex-direction: row-reverse;
-    -o-flex-direction: row-reverse;
-    flex-direction: row-reverse;
-}
-
+.fxdc{-webkit-flex-direction:column;-moz-flex-direction:column;-ms-flex-direction:column;-o-flex-direction:column;flex-direction:column}
+.fxdcr{-webkit-flex-direction:column-reverse;-moz-flex-direction:column-reverse;-ms-flex-direction:column-reverse;-o-flex-direction:column-reverse;flex-direction:column-reverse}
+.fxdr{-webkit-flex-direction:row;-moz-flex-direction:row;-ms-flex-direction:row;-o-flex-direction:row;flex-direction:row}
+.fxdrr{-webkit-flex-direction:row-reverse;-moz-flex-direction:row-reverse;-ms-flex-direction:row-reverse;-o-flex-direction:row-reverse;flex-direction:row-reverse}
 
 /*flex水平方向换行*/
 .fxww{flex-wrap: wrap;}
 .fxwn{flex-wrap: nowrap;}
 .fxwr{flex-wrap: wrap-reverse;}
 
-
 /*flex垂直对齐,start,center,end,stretch*/
-.ais{
-    -webkit-box-align: start;
-    -moz-align-items: flex-start;
-    -webkit-align-items: flex-start;
-    align-items: flex-start;
-}
-.aic {
-    -webkit-box-align: center;
-    -moz-align-items: center;
-    -webkit-align-items: center;
-    align-items: center;
-}
-.aie{
-    -webkit-box-align: end;
-    -moz-align-items: flex-end;
-    -webkit-align-items: flex-end;
-    align-items: flex-end;
-}
-.aisr{
-    -webkit-box-align: stretch;
-    -moz-align-items: stretch;
-    -webkit-align-items: stretch;
-    align-items: stretch;
-}
+.ais{-webkit-box-align:start;-moz-align-items:flex-start;-webkit-align-items:flex-start;align-items:flex-start}
+.aic{-webkit-box-align:center;-moz-align-items:center;-webkit-align-items:center;align-items:center}
+.aie{-webkit-box-align:end;-moz-align-items:flex-end;-webkit-align-items:flex-end;align-items:flex-end}
+.aisr{-webkit-box-align:stretch;-moz-align-items:stretch;-webkit-align-items:stretch;align-items:stretch}
 
 
 /*flex 内容垂直对齐，start,center,end,*/
@@ -158,9 +67,7 @@ input {border:none;outline:none;}
 .acb{align-content: space-between;}
 .aca{align-content: space-around;}
 
-
 /*flex垂直拉伸效果*/
-
 
 
 /*order排序*/
@@ -321,90 +228,26 @@ input {border:none;outline:none;}
 .pb100 {padding-bottom:1rem;}
 
 /*简化padding写法*/
-.plr5{
-    padding-left: 0.05rem;
-    padding-right: 0.05rem;
-}
-.plr10{
-    padding-left: 0.10rem;
-    padding-right: 0.10rem;
-}
-.plr15{
-    padding-left: 0.15rem;
-    padding-right: 0.15rem;
-}
-.plr20{
-    padding-left: 0.20rem;
-    padding-right: 0.20rem;
-}
-.plr25{
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
-}
-.plr30{
-    padding-left: 0.30rem;
-    padding-right: 0.30rem;
-}
-.plr35{
-    padding-left: 0.35rem;
-    padding-right: 0.35rem;
-}
-.plr40{
-    padding-left: 0.40rem;
-    padding-right: 0.40rem;
-}
-.plr45{
-    padding-left: 0.45rem;
-    padding-right: 0.45rem;
-}
-.plr50{
-    padding-left: 0.50rem;
-    padding-right: 0.50rem;
-}
-
-/*padding上下距离*/
-.ptb5{
-    padding-top: 0.05rem;
-    padding-bottom: 0.05rem;
-}
-.ptb10{
-    padding-top: 0.10rem;
-    padding-bottom: 0.10rem;
-}
-.ptb15{
-    padding-top: 0.15rem;
-    padding-bottom: 0.15rem;
-}
-.ptb20{
-    padding-top: 0.20rem;
-    padding-bottom: 0.20rem;
-}
-.ptb25{
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-}
-.ptb30{
-    padding-top: 0.30rem;
-    padding-bottom: 0.30rem;
-}
-.ptb35{
-    padding-top: 0.35rem;
-    padding-bottom: 0.35rem;
-}
-.ptb40{
-    padding-top: 0.40rem;
-    padding-bottom: 0.40rem;
-}
-.ptb45{
-    padding-top: 0.45rem;
-    padding-bottom: 0.45rem;
-}
-.ptb50{
-    padding-top: 0.50rem;
-    padding-bottom: 0.50rem;
-}
-
-
+.plr5{padding-right:.05rem;padding-left:.05rem}
+.plr10{padding-right:.1rem;padding-left:.1rem}
+.plr15{padding-right:.15rem;padding-left:.15rem}
+.plr20{padding-right:.2rem;padding-left:.2rem}
+.plr25{padding-right:.25rem;padding-left:.25rem}
+.plr30{padding-right:.3rem;padding-left:.3rem}
+.plr35{padding-right:.35rem;padding-left:.35rem}
+.plr40{padding-right:.4rem;padding-left:.4rem}
+.plr45{padding-right:.45rem;padding-left:.45rem}
+.plr50{padding-right:.5rem;padding-left:.5rem}
+.ptb5{padding-top:.05rem;padding-bottom:.05rem}
+.ptb10{padding-top:.1rem;padding-bottom:.1rem}
+.ptb15{padding-top:.15rem;padding-bottom:.15rem}
+.ptb20{padding-top:.2rem;padding-bottom:.2rem}
+.ptb25{padding-top:.25rem;padding-bottom:.25rem}
+.ptb30{padding-top:.3rem;padding-bottom:.3rem}
+.ptb35{padding-top:.35rem;padding-bottom:.35rem}
+.ptb40{padding-top:.4rem;padding-bottom:.4rem}
+.ptb45{padding-top:.45rem;padding-bottom:.45rem}
+.ptb50{padding-top:.5rem;padding-bottom:.5rem}
 
 
 /*边距margin/p,m*/
@@ -499,46 +342,16 @@ input {border:none;outline:none;}
 .mb100 {margin-bottom:1rem;}
 
 /*简化margin写法*/
-.mlr5{
-    margin-left: 0.05rem;
-    margin-right: 0.05rem;
-}
-.mlr10{
-    margin-left: 0.10rem;
-    margin-right: 0.10rem;
-}
-.mlr15{
-    margin-left: 0.15rem;
-    margin-right: 0.15rem;
-}
-.mlr20{
-    margin-left: 0.20rem;
-    margin-right: 0.20rem;
-}
-.mlr25{
-    margin-left: 0.25rem;
-    margin-right: 0.25rem;
-}
-.mlr30{
-    margin-left: 0.30rem;
-    margin-right: 0.30rem;
-}
-.mlr35{
-    margin-left: 0.35rem;
-    margin-right: 0.35rem;
-}
-.mlr40{
-    margin-left: 0.40rem;
-    margin-right: 0.40rem;
-}
-.mlr45{
-    margin-left: 0.45rem;
-    margin-right: 0.45rem;
-}
-.mlr50{
-    margin-left: 0.50rem;
-    margin-right: 0.50rem;
-}
+.mlr5{margin-left:.05rem;margin-right:.05rem}
+.mlr10{margin-left:.1rem;margin-right:.1rem}
+.mlr15{margin-left:.15rem;margin-right:.15rem}
+.mlr20{margin-left:.2rem;margin-right:.2rem}
+.mlr25{margin-left:.25rem;margin-right:.25rem}
+.mlr30{margin-left:.3rem;margin-right:.3rem}
+.mlr35{margin-left:.35rem;margin-right:.35rem}
+.mlr40{margin-left:.4rem;margin-right:.4rem}
+.mlr45{margin-left:.45rem;margin-right:.45rem}
+.mlr50{margin-left:.5rem;margin-right:.5rem}
 
 /*边距百分比*/
 .mt0p {margin-top:0%;}
@@ -558,7 +371,6 @@ input {border:none;outline:none;}
 .mt80p {margin-top:80%;}
 .mt90p {margin-top:90%;}
 .mt100p {margin-top:1rem;}
-
 
 /*宽高*/
 .w5 {width:0.05rem;}
@@ -631,9 +443,6 @@ input {border:none;outline:none;}
 .lh400 {line-height:4rem;}
 .lh450 {line-height:4.5rem;}
 .lh500 {line-height:5rem;}
-
-
-
 
 /*自定义宽度*/
 .w100p {width:100%;}
@@ -770,7 +579,6 @@ input {border:none;outline:none;}
 .r100p {right:100%;}
 
 
-
 /*边框bd*/
 .bdb1 {border-bottom:1px solid #e4e4e4;}
 .bdt1 {border-top:1px solid #e4e4e4;}
@@ -792,187 +600,48 @@ input {border:none;outline:none;}
 .bdblr0{border-bottom-left-radius: 0;}
 .bdbrr0{border-bottom-right-radius: 0}
 /*合成部分*/
-.bdrst0{
-    border-top-left-radius:0;
-    border-top-right-radius:0;
-}
-.bdrsb0{
-    border-bottom-left-radius:0;
-    border-bottom-right-radius:0;
-}
+.bdrst0{border-top-left-radius:0;border-top-right-radius:0}
+.bdrsb0{border-bottom-left-radius:0;border-bottom-right-radius:0}
+
 
 /*文本缩进*/
-.ti20{
-    text-indent: 0.20rem;
-}
-.ti24{
-    text-indent: 0.24rem;
-}
-.ti26{
-    text-indent: 0.26rem;
-}
-.ti28{
-    text-indent: 0.28rem;
-}
-.ti30{
-    text-indent: 0.30rem;
-}
+.ti20{text-indent:.2rem}
+.ti24{text-indent:.24rem}
+.ti26{text-indent:.26rem}
+.ti28{text-indent:.28rem}
+.ti30{text-indent:.3rem}
+
 
 /*css3动画,transition*/
-.trs01s{
-    -webkit-transition: 0.1s;
-    -moz-transition: 0.1s;
-    -ms-transition: 0.1s;
-    -o-transition: 0.1s;
-    transition: 0.1s;
-}
-.trs02s{
-    -webkit-transition: 0.2s;
-    -moz-transition: 0.2s;
-    -ms-transition: 0.2s;
-    -o-transition: 0.2s;
-    transition: 0.2s;
-}
-.trs03s{
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -ms-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
-}
-.trs04s{
-    -webkit-transition: 0.4s;
-    -moz-transition: 0.4s;
-    -ms-transition: 0.4s;
-    -o-transition: 0.4s;
-    transition: 0.4s;
-}
-.trs05s{
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-}
-.trs06s{
-    -webkit-transition: 0.6s;
-    -moz-transition: 0.6s;
-    -ms-transition: 0.6s;
-    -o-transition: 0.6s;
-    transition: 0.6s;
-}
-.trs07s{
-    -webkit-transition: 0.7s;
-    -moz-transition: 0.7s;
-    -ms-transition: 0.7s;
-    -o-transition: 0.7s;
-    transition: 0.7s;
-}
-.trs08s{
-    -webkit-transition: 0.8s;
-    -moz-transition: 0.8s;
-    -ms-transition: 0.8s;
-    -o-transition: 0.8s;
-    transition: 0.8s;
-}
-.trs09s{
-    -webkit-transition: 0.9s;
-    -moz-transition: 0.9s;
-    -ms-transition: 0.9s;
-    -o-transition: 0.9s;
-    transition: 0.9s;
-}
-.trs1s{
-    -webkit-transition: 1s;
-    -moz-transition: 1s;
-    -ms-transition: 1s;
-    -o-transition: 1s;
-    transition: 1s;
-}
-.trs2s{
-    -webkit-transition: 2s;
-    -moz-transition: 2s;
-    -ms-transition: 2s;
-    -o-transition: 2s;
-    transition: 2s;
-}
-.trs3s{
-    -webkit-transition: 3s;
-    -moz-transition: 3s;
-    -ms-transition: 3s;
-    -o-transition: 3s;
-    transition: 3s;
-}
-.trs4s{
-    -webkit-transition: 4s;
-    -moz-transition: 4s;
-    -ms-transition: 4s;
-    -o-transition: 4s;
-    transition: 4s;
-}
-.trs5s{
-    -webkit-transition: 5s;
-    -moz-transition: 5s;
-    -ms-transition: 5s;
-    -o-transition: 5s;
-    transition: 5s;
-}
-.trs6s{
-    -webkit-transition: 6s;
-    -moz-transition: 6s;
-    -ms-transition: 6s;
-    -o-transition: 6s;
-    transition: 6s;
-}
-.trs7s{
-    -webkit-transition: 7s;
-    -moz-transition: 7s;
-    -ms-transition: 7s;
-    -o-transition: 7s;
-    transition: 7s;
-}
-.trs8s{
-    -webkit-transition: 8s;
-    -moz-transition: 8s;
-    -ms-transition: 8s;
-    -o-transition: 8s;
-    transition: 8s;
-}
-.trs9s{
-    -webkit-transition: 9s;
-    -moz-transition: 9s;
-    -ms-transition: 9s;
-    -o-transition: 9s;
-    transition: 9s;
-}
-.trs10s{
-    -webkit-transition: 10s;
-    -moz-transition: 10s;
-    -ms-transition: 10s;
-    -o-transition: 10s;
-    transition: 10s;
-}
+.trs01s{-webkit-transition:.1s;-moz-transition:.1s;-ms-transition:.1s;-o-transition:.1s;transition:.1s}
+.trs02s{-webkit-transition:.2s;-moz-transition:.2s;-ms-transition:.2s;-o-transition:.2s;transition:.2s}
+.trs03s{-webkit-transition:.3s;-moz-transition:.3s;-ms-transition:.3s;-o-transition:.3s;transition:.3s}
+.trs04s{-webkit-transition:.4s;-moz-transition:.4s;-ms-transition:.4s;-o-transition:.4s;transition:.4s}
+.trs05s{-webkit-transition:.5s;-moz-transition:.5s;-ms-transition:.5s;-o-transition:.5s;transition:.5s}
+.trs06s{-webkit-transition:.6s;-moz-transition:.6s;-ms-transition:.6s;-o-transition:.6s;transition:.6s}
+.trs07s{-webkit-transition:.7s;-moz-transition:.7s;-ms-transition:.7s;-o-transition:.7s;transition:.7s}
+.trs08s{-webkit-transition:.8s;-moz-transition:.8s;-ms-transition:.8s;-o-transition:.8s;transition:.8s}
+.trs09s{-webkit-transition:.9s;-moz-transition:.9s;-ms-transition:.9s;-o-transition:.9s;transition:.9s}
+.trs1s{-webkit-transition:1s;-moz-transition:1s;-ms-transition:1s;-o-transition:1s;transition:1s}
+.trs2s{-webkit-transition:2s;-moz-transition:2s;-ms-transition:2s;-o-transition:2s;transition:2s}
+.trs3s{-webkit-transition:3s;-moz-transition:3s;-ms-transition:3s;-o-transition:3s;transition:3s}
+.trs4s{-webkit-transition:4s;-moz-transition:4s;-ms-transition:4s;-o-transition:4s;transition:4s}
+.trs5s{-webkit-transition:5s;-moz-transition:5s;-ms-transition:5s;-o-transition:5s;transition:5s}
+.trs6s{-webkit-transition:6s;-moz-transition:6s;-ms-transition:6s;-o-transition:6s;transition:6s}
+.trs7s{-webkit-transition:7s;-moz-transition:7s;-ms-transition:7s;-o-transition:7s;transition:7s}
+.trs8s{-webkit-transition:8s;-moz-transition:8s;-ms-transition:8s;-o-transition:8s;transition:8s}
+.trs9s{-webkit-transition:9s;-moz-transition:9s;-ms-transition:9s;-o-transition:9s;transition:9s}
+.trs10s{-webkit-transition:10s;-moz-transition:10s;-ms-transition:10s;-o-transition:10s;transition:10s}
+
 
 /*偏移量*/
-.trft50p{
-    transform: translate(-50%, -50%);
-}
-
+.trft50p{transform: translate(-50%, -50%);}
 /*文本阴影*/
-.txs1{
-    text-shadow: 1px 1px 1px #383838;
-}
+.txs1{text-shadow: 1px 1px 1px #383838;}
 /*垂直居中*/
-.vam{
-    vertical-align: middle;
-}
-.vat{
-    vertical-align: top;
-}
-.vab{
-    vertical-align: bottom;
-}
-
+.vam{vertical-align:middle}
+.vat{vertical-align:top}
+.vab{vertical-align:bottom}
 
 
 /*装饰*/
@@ -982,22 +651,13 @@ input {border:none;outline:none;}
 .ovh {overflow:hidden;}
 .ovs {overflow:scroll;}
 /*其他  ellipsis*/
-.ellipsis {overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
-.clear {zoom:1;}
-.clear::after {content:"";display:block;clear:both;}
-.line1 {overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
-.line2 {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical !important;
-    overflow: hidden;
-}
-.line3 {
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical !important;
-    overflow: hidden;
-}
+.ellipsis{overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.clear{zoom:1}
+.clear::after{content:"";display:block;clear:both}
+.line1{overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.line2{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical!important;overflow:hidden}
+.line3{display:-webkit-box;-webkit-line-clamp:3;-webkit-box-orient:vertical!important;overflow:hidden}
+
 .z-1 {z-index:-1;}
 .z-2 {z-index:-2;}
 .z-3 {z-index:-3;}
@@ -1015,19 +675,3 @@ input {border:none;outline:none;}
 .mauto {margin:0 auto;}
 .bg-white{background: white;}
 .bg-black{background: black;}
-/*常用按钮*/
-btn.active,.btn:active {background-image:none;outline:0;-webkit-box-shadow:inset 0 3px 0.05rem rgba(0,0,0,.125);box-shadow:inset 0 3px 0.05rem rgba(0,0,0,.125);}
-.btn {display:inline-block;padding:0.06rem 0.12rem;cursor:pointer;border:1px solid transparent;border-radius:0.04rem;}
-.btn-default {color:#333;background-color:#fff;border-color:#ccc;}
-.btn-default:active:hover {color:#333;background-color:#d4d4d4;border-color:#8c8c8c;}
-.btn-default:hover {color:#333;background-color:#e6e6e6;border-color:#adadad;}
-.btn-primary {color:#fff;background-color:#3190e8;border-color:#338de0;}
-.btn-primary:hover {color:#fff;background-color:#286090;border-color:#204d74;}
-.btn-primary:active:hover {color:#fff;background-color:#204d74;border-color:#122b40;}
-.btn-success {color:#fff;background-color:#5cb85c;border-color:#4cae4c;}
-.btn-success:active:hover {color:#fff;background-color:#378037;border-color:#8c8c8c;}
-.btn-success:hover {color:#fff;background-color:#449d44;border-color:#adadad;}
-.btn-danger {color:#fff;background-color:#d9534f;border-color:#d43f3a;}
-.btn-danger:active:hover {color:#fff;background-color:#ac2925;border-color:#761c19;}
-.btn-danger:hover {color:#fff;background-color:#c9302c;border-color:#ac2925;}
-.btn-block {width:100%;display:block;}
